--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
-/.bundle/
-/.yardoc
-/Gemfile.lock
-/_yardoc/
-/coverage/
-/doc/
-/pkg/
-/spec/reports/
-/tmp/
+tmp
+pkg
+test
+*yardoc
+.nyc_output
 node_modules
+
+doc
+lib
+.bundle
+Gemfile*
+Rakefile
 snuggsi-*.gem
-/.nyc_output
+snuggsi.gemspec
