--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,14 @@
-lib
-bin
+tmp
+pkg
 test
-Gemfile
-snuggsi-*.gem
+*yardoc
+.nyc_output
+node_modules
+
+doc
+lib
+.bundle
+Gemfile*
 Rakefile
+snuggsi-*.gem
 snuggsi.gemspec
