--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
 
     "test": "node --use_strict index.test.es",
     "watch": "node watch.es",
+    "watch/browser": "browser-sync start --server --port=8181 --index=harness.html --files './harness.html,proxy.js'",
 
-    "cover": "tap index.test.es --cov --coverage-report=lcov"
+    "cover": "tap index.test.es --cov --coverage-report=lcov",
+    "weight": "for file in ./*.js; do echo eval $(gzip -9 -c $file | wc -c; done)"
   },
 
   "devDependencies": {
-    "tap": "*"
+    "tap": "*",
+    "browser-sync": "*"
   }
 }
