--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
 
   "scripts": {
     "postinstall": "npm ln ../jsdom && npm ln ../buble-tape",
-
     "test": "node --use_strict index.test.es",
+
     "watch": "node watch.es",
-    "watch/browser": "browser-sync start --config=./watch.browser.js",
+    "weigh": "echo $(gzip -9 -c -S=.js ./*.js | wc -c) bytes",
+
+    "browse": "browser-sync start --config=./watch.browser.js",
 
     "cover": "tap index.test.es --cov --coverage-report=lcov",
-    "weight": "echo $(gzip -9 -c -S=.js ./*.js | wc -c) bytes"
   },
 
   "devDependencies": {
