--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 
     "browse": "browser-sync start --config=./watch.browser.js",
 
-    "cover": "tap index.test.es --cov --coverage-report=lcov",
+    "cover": "tap index.test.es --cov --coverage-report=lcov"
   },
 
   "devDependencies": {
