--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "watch": "node watch.es",
     "weigh": "echo $(gzip -9 -c -S=.js ./*.js | wc -c) bytes",
 
-    "browse": "browser-sync start --config=./watch.browser.js",
+    "browse": "browser-sync start --config=./watch.browser.es",
 
     "cover": "tap index.test.es --cov --coverage-report=lcov"
   },
