--- a/package.json
+++ b/package.json
@@ -31,14 +31,25 @@
     "test": "node --use_strict index.test.es",
     "watch": "node watch.es",
 
-    "bundle": "cat state.es elements/tokenize.es elements/template.es elements/element.es > dist/snuggsi.es",
+    "compile":
+      "npm run bundle && npm run transpile && npm run uglify && npm run gzip && npm run weigh",
 
-    "transpile": "npm run bundle && node ./transpile.es > ./dist/snuggsi.js && npm run uglify && npm run gzip && npm run weigh",
+    "bundle":
+      "cat state.es elements/tokenize.es elements/template.es elements/element.es > dist/snuggsi.es",
+
+    "transpile":
+      "npm run bundle && node ./transpile.es > ./dist/snuggsi.js && npm run uglify && npm run gzip && npm run weigh",
+
+    "uglify":
+      "uglifyjs ./dist/snuggsi.js -c -m -o ./dist/snuggsi.min.js",
+
+    "gzip":
+      "gzip -k -9 -c -S=.js ./dist/*.min.js > ./dist/snuggsi.min.js.gz",
+
+    "weigh":
+      "npm run bundle && echo $(gzip -9 -c -S=.js ./dist/*.min.js | wc -c) bytes",
+
     "copy" : "pbcopy < ./dist/snuggsi.js",
-    "uglify": "uglifyjs ./dist/snuggsi.js -c -m -o ./dist/snuggsi.min.js",
-    "gzip": "gzip -k -9 -c -S=.js ./dist/*.min.js > ./dist/snuggsi.min.js.gz",
-
-    "weigh": "npm run bundle && echo $(gzip -9 -c -S=.js ./dist/*.min.js | wc -c) bytes",
     "browse": "browser-sync start --config=./watch.browser.es",
     "cover": "tap index.test.es --cov --coverage-report=lcov"
   },
