Update package.json transpilation step

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "package": "./package",
 
     "bundle":
-      "cat elements/tokenize.es elements/template.es elements/Global-Event-Handlers.es elements/element.es > dist/snuggsi.es",
+      "cat elements/walkable.es elements/global-event-handlers.es elements/element.es > dist/snuggsi.es",
 
     "transpile":
       "npm run bundle && node ./transpile.es > ./dist/snuggsi.js && npm run uglify && npm run gzip && npm run weigh",
