--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       "npm run bundle && node ./transpile.es > ./dist/snuggsi.js && npm run uglify && npm run gzip && npm run weigh",
 
     "bundle":
-      "cat elements/walkable.es elements/global-event-handlers.es elements/element.es > dist/snuggsi.es",
+      "cat elements/parent-node.es elements/global-event-handlers.es elements/element.es > dist/snuggsi.es",
 
     "uglify":
       "uglifyjs ./dist/snuggsi.js -c -m -o ./dist/snuggsi.min.js",
@@ -53,10 +53,10 @@
     "cover": "tap index.test.es --cov --coverage-report=lcov"
   },
   "devDependencies": {
-    "tap": "*"
+    "tap": "*",
     "buble": "*",
     "uglifyjs": "*",
     "browser-sync": "*",
-    "devtools-terminal": "^0.1.3",
+    "devtools-terminal": "^0.1.3"
   }
 }
