--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ test
 *yardoc
 .nyc_output
 node_modules
+npm-debug.log
 
 doc
 lib
@@ -14,3 +15,5 @@ snuggsi-*.gem
 snuggsi.gemspec
 notification.es
 NOTES
+.DS_Store
+/*.env
