--- a/package.json
+++ b/package.json
@@ -28,31 +28,45 @@
     "test": "test"
   },
   "scripts": {
-    "postinstall": "[ \"$NODE_ENV\" != production ] && npm ln ../jsdom && npm ln ../buble-tape",
-    "start": "./index.js",
-    "test": "node --use_strict index.test.es",
-    "watch": "node watch.es",
 
-    "package": "./package",
+    "postinstall":
+      "[ \"$NODE_ENV\" != production ] && npm ln ../jsdom && npm ln ../buble-tape"
 
-    "compile":
-      "npm run bundle && node ./transpile.es > ./dist/snuggsi.js && npm run uglify && npm run gzip && npm run weigh",
+  , "start":
+      "./index.js"
 
-    "bundle":
-      "cat elements/parent-node.es elements/event-target.es elements/global-event-handlers.es elements/element.es elements/template.es > dist/snuggsi.es",
+  , "package":
+      "./package"
 
-    "uglify":
-      "uglifyjs ./dist/snuggsi.js -c -m -o ./dist/snuggsi.min.js",
+  , "watch":
+      "node watch.es"
 
-    "gzip":
-      "gzip -k -9 -c -S=.js ./dist/*.min.js > ./dist/snuggsi.min.js.gz",
+  , "test":
+      "node --use_strict index.test.es"
 
-    "weigh":
-      "npm run bundle && echo $(gzip -9 -c -S=.js ./dist/*.min.js | wc -c) bytes",
+  , "compile":
+      "npm run bundle && node ./transpile.es > ./dist/snuggsi.js && npm run uglify && npm run gzip && npm run weigh"
 
-    "copy" : "pbcopy < ./dist/snuggsi.js",
-    "browse": "browser-sync start --config=./watch.browser.es",
-    "cover": "tap index.test.es --cov --coverage-report=lcov"
+  , "bundle":
+      "cat elements/template.es elements/event-target.es elements/parent-node.es elements/global-event-handlers.es elements/element.es > dist/snuggsi.es"
+
+  , "uglify":
+      "uglifyjs ./dist/snuggsi.js -c -m -o ./dist/snuggsi.min.js"
+
+  , "gzip":
+      "gzip -k -9 -c -S=.js ./dist/*.min.js > ./dist/snuggsi.min.js.gz"
+
+  , "weigh":
+      "npm run bundle && echo $(gzip -9 -c -S=.js ./dist/*.min.js | wc -c) bytes"
+
+  , "copy" :
+      "pbcopy < ./dist/snuggsi.js"
+
+  , "browse":
+      "browser-sync start --config=./watch.browser.es"
+
+  , "cover":
+      "tap index.test.es --cov --coverage-report=lcov"
   },
   "devDependencies": {
     "tap": "*",
