Update Package.json scripts

--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
   "name": "snuggsi",
+
   "version": "0.1.2",
+
   "author": "Snuggs",
-  "description": "Easy DOM Components",
+
+  "description": "Easy Web Components in 1KB",
+
   "license": "MIT",
+
   "bugs": {
     "url": "https://github.com/devpunks/snuggsi/issues"
   },
+
   "homepage": "https://github.com/devpunks/snuggsi#readme",
   "engines": {
-    "node": "7.8.x",
-    "npm": "4.2.0"
+    "npm": "4.2.0",
+    "node": "7.8.x"
   },
+
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/devpunks/snuggsi.git"
   },
+
   "keywords": [
     "web",
     "components",
@@ -23,10 +31,13 @@
     "routing",
     "templates"
   ],
+
   "main": "index.es",
+
   "directories": {
     "test": "test"
   },
+
   "scripts": {
 
     "postinstall":
@@ -59,7 +70,7 @@
   , "weigh":
       "npm run bundle && echo $(gzip -9 -c -S=.js ./dist/*.min.js | wc -c) bytes"
 
-  , "copy" :
+  , "copy":
       "pbcopy < ./dist/snuggsi.js"
 
   , "browse":
@@ -68,6 +79,7 @@
   , "cover":
       "tap index.test.es --cov --coverage-report=lcov"
   },
+
   "devDependencies": {
     "tap": "*",
     "buble": "*",
