--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
       "pbcopy < ./dist/snuggsi.js"
 
   , "browse":
-      "browser-sync start --config=./watch.browser.es"
+      "npm run watch & browser-sync start --config=./watch.browser.es"
 
   , "cover":
       "tap index.test.es --cov --coverage-report=lcov"
