command for brotli compression
to be used alongside gzip on the server,
`brew install brotli` to set up on OSX, then
relative to snuggsi package.json, run
`npm run brotli` or `yarn run brotli`
to apply the compression to the minified library
file. you can also run `bro` directly by hand
against arbitrary files.

see [here for more info](https://github.com/google/brotli)

--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
   , "gzip":
       "gzip -k -9 -c -S=.js ./dist/*.min.js > ./dist/snuggsi.min.js.gz"
 
+  , "brotli":
+      "bro --quality 11 --repeat 1 --input ./dist/*.min.js > ./dist/snuggsi.min.js.br"
+
   , "weigh":
       "npm run bundle && echo $(gzip -9 -c -S=.js ./dist/*.min.js | wc -c) bytes"
 
