Add distribute commit

--- a/package.json
+++ b/package.json
@@ -84,6 +84,9 @@
 
   , "cover":
       "tap index.test.es --cov --coverage-report=lcov"
+
+  , "distribute":
+      "./distribute"
   },
 
   "devDependencies": {
