--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snuggsi",
-  "version": "0.4.21",
+  "version": "0.4.22",
   "author": "Snuggs",
   "description": "Easy Web Components in 1KB",
   "license": "MIT",
@@ -29,52 +29,22 @@
     "example": "examples"
   },
   "scripts": {
-    "postinstall":
-      "[ \"$NODE_ENV\" != production ] && npm ln ../jsdom && npm ln ../buble-tape",
-
-    "start":
-      "./index.js",
-
-    "package":
-      "./package",
-
-    "watch":
-      "node watch.es",
-
-    "test":
-      "node --use_strict index.test.es",
-
-    "compile":
-      "npm run transpile && npm run uglify && npm run gzip && npm run weigh",
-
-    "transpile":
-      "npm run bundle && node ./transpile.es > ./dist/snuggsi.js",
-
-    "bundle":
-      "cat elements/token-list.es elements/template.es elements/event-target.es elements/parent-node.es elements/global-event-handlers.es elements/element.es > dist/snuggsi.es",
-    "uglify":
-      "uglifyjs ./dist/snuggsi.js -c -m -o ./dist/snuggsi.min.js",
-
-    "gzip":
-      "gzip -k -9 -c -S=.js ./dist/*.min.js > ./dist/snuggsi.min.js.gz",
-
-    "brotli":
-      "bro --quality 11 --repeat 1 --input ./dist/*.min.js > ./dist/snuggsi.min.js.br",
-
-    "weigh":
-      "npm run bundle && echo $(gzip -9 -c -S=.js ./dist/*.min.js | wc -c) bytes",
-
-    "copy":
-      "pbcopy < ./dist/snuggsi.js",
-
-    "browse":
-      "npm run watch & browser-sync start --config=./watch.browser.es",
-
-    "cover":
-      "tap index.test.es --cov --coverage-report=lcov",
-
-    "distribute":
-      "./distribute"
+    "postinstall": "[ \"$NODE_ENV\" != production ] && npm ln ../jsdom && npm ln ../buble-tape",
+    "start": "./index.js",
+    "package": "./package",
+    "watch": "node watch.es",
+    "test": "node --use_strict index.test.es",
+    "compile": "npm run transpile && npm run uglify && npm run gzip && npm run weigh",
+    "transpile": "npm run bundle && node ./transpile.es > ./dist/snuggsi.js",
+    "bundle": "cat elements/token-list.es elements/template.es elements/event-target.es elements/parent-node.es elements/global-event-handlers.es elements/element.es > dist/snuggsi.es",
+    "uglify": "uglifyjs ./dist/snuggsi.js -c -m -o ./dist/snuggsi.min.js",
+    "gzip": "gzip -k -9 -c -S=.js ./dist/*.min.js > ./dist/snuggsi.min.js.gz",
+    "brotli": "bro --quality 11 --repeat 1 --input ./dist/*.min.js > ./dist/snuggsi.min.js.br",
+    "weigh": "npm run bundle && echo $(gzip -9 -c -S=.js ./dist/*.min.js | wc -c) bytes",
+    "copy": "pbcopy < ./dist/snuggsi.js",
+    "browse": "npm run watch & browser-sync start --config=./watch.browser.es",
+    "cover": "tap index.test.es --cov --coverage-report=lcov",
+    "distribute": "./distribute"
   },
   "devDependencies": {
     "tap": "*",
