--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "package": "./package",
     "watch": "node watch.es",
     "test": "node --use_strict index.test.es",
-    "compile": "npm run transpile && npm run uglify && npm run compress && npm run weigh",
+    "compile": "npm run transpile && npm run minify && npm run compress && npm run weigh",
     "transpile": "npm run bundle && node ./transpile.es > ./dist/snuggsi.js",
     "bundle": "cat elements/html-link-element.es elements/token-list.es elements/template.es elements/event-target.es elements/parent-node.es elements/global-event-handlers.es elements/element.es > dist/snuggsi.es && cp dist/snuggsi.es ./snuggsi.js",
+    "minify": "npm run uglify && npm run gcc",
+    "gcc": "node ./gcc > ./dist/snuggsi.min.es",
     "uglify": "uglifyjs ./dist/snuggsi.js -c -m -o ./dist/snuggsi.min.js",
     "compress": " npm run gzip && npm run brotli",
     "gzip": "gzip -k -9 -c -S=.js ./dist/*.min.js > ./dist/snuggsi.min.js.gz && gzip -k -9 -c -S=.js ./dist/*.min.es > ./dist/snuggsi.min.es.gz",
@@ -55,6 +57,7 @@
     "devtools-terminal": "*"
   },
   "dependencies": {
+    "google-closure-compiler-js": "*",
     "buble-tape": "*",
     "jsdom": "*"
   }
