--- a/package.json
+++ b/package.json
@@ -33,17 +33,18 @@
     "package": "./package",
     "watch": "node watch.es",
     "test": "node --use_strict index.test.es",
-    "compile": "npm run transpile && npm run minify && npm run compress && npm run weigh",
+    "compile": "npm run truncate && npm run transpile && npm run minify && npm run compress && npm run weigh",
     "transpile": "npm run bundle && node ./transpile.es > ./dist/snuggsi.js",
     "bundle": "cat elements/html-link-element.es elements/token-list.es elements/template.es elements/event-target.es elements/parent-node.es elements/global-event-handlers.es elements/element.es > dist/snuggsi.es",
     "minify": "npm run uglify && npm run gcc",
-    "gcc": "node ./gcc > ./dist/snuggsi.min.es",
+    "gcc": "./gcc > ./dist/snuggsi.min.es || true",
     "uglify": "uglifyjs ./dist/snuggsi.js -c -m -o ./dist/snuggsi.min.js",
     "compress": " npm run gzip && npm run brotli",
     "gzip": "gzip -k -9 -c -S=.js ./dist/*.min.js > ./dist/snuggsi.min.js.gz && gzip -k -9 -c -S=.js ./dist/*.min.es > ./dist/snuggsi.min.es.gz",
     "brotli": "bro --quality 11 --repeat 1 --input ./dist/*.min.js > ./dist/snuggsi.min.js.br && bro --quality 11 --repeat 1 --input ./dist/*.min.es > ./dist/snuggsi.min.es.br",
     "weigh": "ls -al ./dist",
     "copy": "pbcopy < ./dist/snuggsi.js",
+    "truncate": "rm ./dist/*",
     "browse": "npm run watch & browser-sync start --config=./watch.browser.es",
     "cover": "tap index.test.es --cov --coverage-report=lcov",
     "distribute": "./distribute"
