Refactor elements/component.es

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "test": "node --use_strict index.test.es",
     "compile": "npm run transpile && npm run minify && npm run compress && npm run weigh",
     "transpile": "npm run bundle && node ./transpile.es > ./dist/snuggsi.js",
-    "bundle": "cat elements/html-link-element.es elements/token-list.es elements/template.es elements/event-target.es elements/parent-node.es elements/global-event-handlers.es elements/element.es > dist/snuggsi.es",
+    "bundle": "cat elements/html-link-element.es elements/token-list.es elements/template.es elements/event-target.es elements/parent-node.es elements/global-event-handlers.es elements/component.es elements/element.es > dist/snuggsi.es",
     "minify": "npm run uglify && npm run gcc",
     "gcc": "./gcc > ./dist/snuggsi.min.es || true",
     "uglify": "uglifyjs ./dist/snuggsi.js -c -m -o ./dist/snuggsi.min.js",
