--- a/package.json
+++ b/package.json
@@ -54,11 +54,11 @@
   },
   "dependencies": {
     "tap": "*",
-    "jsdom": "*"
+    "jsdom": "*",
     "buble": "*",
     "uglifyjs": "*",
     "buble-tape": "*",
     "browser-sync": "*",
-    "google-closure-compiler-js": "*",
+    "google-closure-compiler-js": "*"
   }
 }
