--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "weigh": "ls -al ./dist",
     "copy": "pbcopy < ./dist/snuggsi.js",
     "truncate": "rm ./dist/*",
-    "browse": "browser-sync start --config=./watch.browser.es",
+    "browse": "PORT=3000 npm run start & npm run watch & browser-sync start --config=./watch.browser.es -- --proxy=localhost:3000",
     "cover": "tap index.test.es --cov --coverage-report=lcov",
     "distribute": "./distribute"
   },
