--- a/package.json
+++ b/package.json
@@ -45,9 +45,8 @@
     "gzip": "gzip -k -9 -c -S=.js ./dist/*.min.js > ./dist/snuggsi.min.js.gz && gzip -k -9 -c -S=.js ./dist/*.min.es > ./dist/snuggsi.min.es.gz",
     "brotli": "bro --quality 11 --repeat 1 --input ./dist/*.min.js > ./dist/snuggsi.min.js.br && bro --quality 11 --repeat 1 --input ./dist/*.min.es > ./dist/snuggsi.min.es.br",
     "weigh": "ls -al ./dist",
-    "copy": "pbcopy < ./dist/snuggsi.js",
     "truncate": "rm ./dist/*",
-    "browse": "PORT=3000 npm run start & npm run watch & browser-sync start --config=./watch.browser.es -- --proxy=localhost:3000",
+    "browse": "npm run postinstall && PORT=3000 npm run start & npm run watch & browser-sync start --config=./watch.browser.es",
     "cover": "tap index.test.es --cov --coverage-report=lcov",
     "distribute": "./distribute"
   },
