--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "brotli": "bro --quality 11 --repeat 1 --input ./dist/*.min.js > ./dist/snuggsi.min.js.br && bro --quality 11 --repeat 1 --input ./dist/*.min.es > ./dist/snuggsi.min.es.br",
     "weigh": "ls -al ./dist",
     "truncate": "rm ./dist/*",
-    "browse": "npm run postinstall && PORT=3000 npm run start & npm run watch & browser-sync start --config=./watch.browser.es",
+    "browse": "PORT=3000 npm run start & npm run watch & browser-sync start --config=./watch.es",
     "cover": "tap index.test.es --cov --coverage-report=lcov",
     "distribute": "./distribute",
     "copy": "cp -f ./index.html ./public/index.html && cp -fr ./examples ./public"
