--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "browse": "PORT=3000 npm run start & PORT=3000 npm run watch & browser-sync start --config=./watch.es",
     "cover": "tap index.test.es --cov --coverage-report=lcov",
     "distribute": "./distribute",
-    "copy": "cp -f ./index.html ./public/index.html && cp -fr ./examples ./public"
+    "copy": "cp -f ./index.html ./public/index.html && cp -fr ./examples ./public && cp -f ./dist/snuggsi.es ./snuggsi.js"
   },
   "devDependencies": {
     "devtools-terminal": "*"
@@ -66,3 +66,4 @@
     "google-closure-compiler-js": "*"
   }
 }
+
