--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "start": "node --harmony ./index.es",
-    "postinstall": "npm run copy",
+    "postinstall": "./publicize",
     "package": "./package",
     "watch": "node watch.es",
     "test": "node --use_strict index.test.es",
@@ -48,8 +48,7 @@
     "truncate": "rm ./dist/*",
     "browse": "PORT=3000 npm run start & PORT=3000 npm run watch & browser-sync start --config=./watch.es",
     "cover": "tap index.test.es --cov --coverage-report=lcov",
-    "distribute": "./distribute",
-    "copy": "cp -f ./index.html ./public/index.html && cp -fr ./examples ./public && cp -f ./dist/snuggsi.es ./snuggsi.js"
+    "distribute": "./distribute"
   },
   "devDependencies": {
     "devtools-terminal": "*"
