--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "start": "node --harmony ./index.es",
-    "postinstall": "./publicize",
+    "postinstall": "./publish",
     "package": "./package",
     "watch": "node watch.es",
     "test": "node --use_strict index.test.es",
