Add Uglifyjs 2 https://github.com/mishoo/UglifyJS2

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "jsdom": "*",
     "buble": "*",
     "uglifyjs": "*",
+    "uglify-js": "*",
     "buble-tape": "*",
     "browser-sync": "*",
     "google-closure-compiler-js": "*"
