Add uglify-es https://github.com/mishoo/UglifyJS2/tree/harmony

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "buble": "*",
     "uglifyjs": "*",
     "uglify-js": "*",
+    "uglify-es": "*",
     "buble-tape": "*",
     "browser-sync": "*",
     "google-closure-compiler-js": "*"
