--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "start": "node --harmony ./index.es",
     "postinstall": "./publish",
     "package": "./package",
-    "watch": "node watch.es",
+    "watch": "node watch/index.es",
     "test": "node --use_strict index.test.es",
     "compile": "npm run transpile && npm run minify && npm run compress && npm run weigh",
     "transpile": "npm run bundle && node ./transpile.es > ./dist/snuggsi.js",
@@ -45,7 +45,7 @@
     "brotli": "bro --quality 11 --repeat 1 --input ./dist/*.min.js > ./dist/snuggsi.min.js.br && bro --quality 11 --repeat 1 --input ./dist/*.min.es > ./dist/snuggsi.min.es.br",
     "weigh": "ls -al ./dist",
     "truncate": "rm ./dist/*",
-    "browse": "PORT=3000 npm run start & PORT=3000 npm run watch & browser-sync start --config=./watch.es",
+    "browse": "PORT=3000 npm run start & PORT=3000 npm run watch & browser-sync start --config=./watch/index.es",
     "cover": "tap index.test.es --cov --coverage-report=lcov",
     "distribute": "./distribute"
   },
