--- a/package.json
+++ b/package.json
@@ -59,11 +59,9 @@
     "tap": "*",
     "jsdom": "*",
     "buble": "*",
-    "uglifyjs": "*",
     "uglify-js": "*",
     "uglify-es": "*",
     "buble-tape": "*",
-    "browser-sync": "*",
-    "google-closure-compiler-js": "*"
+    "browser-sync": "*"
   }
 }
