--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "koa-send": "*",
     "koa-static": "*",
     "tap": "*",
+    "tape": "*",
     "jsdom": "*",
     "buble": "*",
     "uglify-js": "*",
