Add tap-nyc and update package dependencies

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "koa-static": "*",
     "tap": "*",
     "tape": "*",
+    "tap-nyc": "*",
     "jsdom": "*",
     "buble": "*",
     "uglify-js": "*",
