--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "bundle":
       "bin/bundle",
 
-    "minify": "npm run uglify",
+    "minify":
+      "npm run uglify",
+
     "uglify": "uglifyjs ./dist/snuggsi.es -c -m -o ./dist/snuggsi.min.es && uglifyjs ./dist/snuggsi.js -c -m -o ./dist/snuggsi.min.js",
     "compress": " npm run gzip && npm run brotli",
     "gzip": "gzip -k -9 -c -S=.js ./dist/*.min.js > ./dist/snuggsi.min.js.gz && gzip -k -9 -c -S=.js ./dist/*.min.es > ./dist/snuggsi.min.es.gz",
