--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "weigh":
       "ls -al ./dist",
 
-    "browse": "PORT=3000 npm run start & PORT=3000 npm run watch & browser-sync start --config=./watch/index.es",
+    "browse":
+      "PORT=3000 npm run start & PORT=3000 npm run watch & browser-sync start --config=./watch/index.es",
 
     "cover": "tap index.test.es --cov --coverage-report=lcov",
 
