--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "browse":
       "PORT=3000 npm run start npm run watch & browser-sync start --config=./watch/index.es",
 
-    "cover": "tap index.test.es --cov --coverage-report=lcov",
+    "cover":
+      "tap index.test.es --cov --coverage-report=lcov",
 
     "distribute":
       "bin/distribute"
