--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snuggsi",
-  "version": "0.7.24",
+  "version": "0.7.25",
   "author": "Snuggs",
   "description": "Easy Web Components in 1KB",
   "license": "MIT",
@@ -30,54 +30,23 @@
     "example": "examples"
   },
   "scripts": {
-    "start":
-      "node --harmony ./index.es",
-
-    "postinstall":
-      "./publish",
-
-    "package":
-      "bin/package",
-
-    "watch":
-      "node watch/index.es",
-
-    "test":
-      "./bin/test",
-
-    "cover":
-      "tap index.test.es --cov --coverage-report=lcov",
-
-    "compile":
-      "npm run transpile && npm run minify && npm run compress && npm run weigh",
-
+    "start": "node --harmony ./index.es",
+    "postinstall": "./publish",
+    "package": "bin/package",
+    "watch": "node watch/index.es",
+    "test": "./bin/test",
+    "cover": "tap index.test.es --cov --coverage-report=lcov",
+    "compile": "npm run transpile && npm run minify && npm run compress && npm run weigh",
     "transpile": "npm run bundle && node ./transpile.es > ./dist/snuggsi.js",
-    "bundle":
-      "bin/bundle",
-
-    "minify":
-      "npm run uglify",
-
-    "uglify":
-      "uglifyjs ./dist/snuggsi.es -c -m -o ./dist/snuggsi.min.es && uglifyjs ./dist/snuggsi.js -c -m -o ./dist/snuggsi.min.js",
-
-    "compress":
-      "npm run gzip && npm run brotli",
-
-    "gzip":
-      "gzip -k -9 -c -S=.js ./dist/*.min.js > ./dist/snuggsi.min.js.gz && gzip -k -9 -c -S=.js ./dist/*.min.es > ./dist/snuggsi.min.es.gz",
-
-    "brotli":
-      "bro --quality 11 --repeat 1 --input ./dist/*.min.js > ./dist/snuggsi.min.js.br && bro --quality 11 --repeat 1 --input ./dist/*.min.es > ./dist/snuggsi.min.es.br",
-
-    "weigh":
-      "ls -al ./dist",
-
-    "browse":
-      "PORT=3000 npm run start npm run watch & browser-sync start --config=./watch/index.es",
-
-    "distribute":
-      "bin/distribute"
+    "bundle": "bin/bundle",
+    "minify": "npm run uglify",
+    "uglify": "uglifyjs ./dist/snuggsi.es -c -m -o ./dist/snuggsi.min.es && uglifyjs ./dist/snuggsi.js -c -m -o ./dist/snuggsi.min.js",
+    "compress": "npm run gzip && npm run brotli",
+    "gzip": "gzip -k -9 -c -S=.js ./dist/*.min.js > ./dist/snuggsi.min.js.gz && gzip -k -9 -c -S=.js ./dist/*.min.es > ./dist/snuggsi.min.es.gz",
+    "brotli": "bro --quality 11 --repeat 1 --input ./dist/*.min.js > ./dist/snuggsi.min.js.br && bro --quality 11 --repeat 1 --input ./dist/*.min.es > ./dist/snuggsi.min.es.br",
+    "weigh": "ls -al ./dist",
+    "browse": "PORT=3000 npm run start npm run watch & browser-sync start --config=./watch/index.es",
+    "distribute": "bin/distribute"
   },
   "devDependencies": {
     "devtools-terminal": "*"
