Update browse script in package.json

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "doc": "docs",
     "example": "examples"
   },
+  "config" : {
+    "PORT": "3008"
+  },
   "scripts": {
     "start": "node --harmony ./index.es",
     "postinstall": "./publish",
@@ -45,7 +48,7 @@
     "gzip": "gzip -k -9 -c -S=.js ./dist/*.min.js > ./dist/snuggsi.min.js.gz && gzip -k -9 -c -S=.js ./dist/*.min.es > ./dist/snuggsi.min.es.gz",
     "brotli": "bro --quality 11 --repeat 1 --input ./dist/*.min.js > ./dist/snuggsi.min.js.br && bro --quality 11 --repeat 1 --input ./dist/*.min.es > ./dist/snuggsi.min.es.br",
     "weigh": "ls -al ./dist",
-    "browse": "PORT=3000 npm run start npm run watch & browser-sync start --config=./watch/index.es",
+    "browse": "bin/browse",
     "distribute": "bin/distribute"
   },
   "devDependencies": {
