Update minify script for package.json

--- a/package.json
+++ b/package.json
@@ -40,10 +40,9 @@
     "test": "./bin/test",
     "cover": "tap index.test.es --cov --coverage-report=lcov",
     "compile": "npm run transpile && npm run minify && npm run compress && npm run weigh",
-    "transpile": "npm run bundle && node ./transpile.es > ./dist/snuggsi.js",
+    "transpile": "bin/bundle && node ./transpile.es > ./dist/snuggsi.js",
     "bundle": "bin/bundle",
-    "minify": "npm run uglify",
-    "uglify": "uglifyjs ./dist/snuggsi.es -c -m -o ./dist/snuggsi.min.es && uglifyjs ./dist/snuggsi.js -c -m -o ./dist/snuggsi.min.js",
+    "minify": "uglifyjs ./dist/snuggsi.es -c -m -o ./dist/snuggsi.min.es && uglifyjs ./dist/snuggsi.js -c -m -o ./dist/snuggsi.min.js",
     "compress": "npm run gzip && npm run brotli",
     "gzip": "gzip -k -9 -c -S=.js ./dist/*.min.js > ./dist/snuggsi.min.js.gz && gzip -k -9 -c -S=.js ./dist/*.min.es > ./dist/snuggsi.min.es.gz",
     "brotli": "bro --quality 11 --repeat 1 --input ./dist/*.min.js > ./dist/snuggsi.min.js.br && bro --quality 11 --repeat 1 --input ./dist/*.min.es > ./dist/snuggsi.min.es.br",
