Add bin/shrink script

--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "watch": "node watch/index.es",
     "test": "./bin/test",
     "cover": "tap index.test.es --cov --coverage-report=lcov",
-    "compile": "npm run transpile && npm run minify && npm run compress && npm run weigh",
+    "compile": "npm run transpile && bin/shrink && npm run compress && npm run weigh",
     "transpile": "bin/bundle && node ./transpile.es > ./dist/snuggsi.js",
     "bundle": "bin/bundle",
-    "minify": "uglifyjs ./dist/snuggsi.es -c -m -o ./dist/snuggsi.min.es && uglifyjs ./dist/snuggsi.js -c -m -o ./dist/snuggsi.min.js",
+    "shrink": "bin/shrink",
     "compress": "npm run gzip && npm run brotli",
     "gzip": "gzip -k -9 -c -S=.js ./dist/*.min.js > ./dist/snuggsi.min.js.gz && gzip -k -9 -c -S=.js ./dist/*.min.es > ./dist/snuggsi.min.es.gz",
     "brotli": "bro --quality 11 --repeat 1 --input ./dist/*.min.js > ./dist/snuggsi.min.js.br && bro --quality 11 --repeat 1 --input ./dist/*.min.es > ./dist/snuggsi.min.es.br",
