Add gzip dependency

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "tap-nyc": "*",
     "jsdom": "*",
     "buble": "*",
+    "gzip": "*",
     "uglify-js": "*",
     "uglify-es": "*",
     "buble-tape": "*",
