Remove stale `cover` script that was bit-rotting

--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "start": "node --harmony ./index.es",
     "postinstall": "bin/publish",
     "package": "bin/package",
-    "test": "./bin/test",
-    "cover": "tap index.test.es --cov --coverage-report=lcov"
+    "test": "./bin/test"
   },
   "devDependencies": {
     "buble": "*",
