--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "homepage": "https://github.com/devpunks/snuggsi#readme",
   "engines": {
-    "npm": "4.2.0",
-    "node": "7.8.x"
+    "npm": "5.0.x",
+    "node": "8.1.x"
   },
   "repository": {
     "type": "git",
