--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ sudo: false
 # install
 # before_script
 script:
-  - bin/crank
+  - bin/test
+  - bin/cover
 # before_cache
 # after_success
 # after_failure
