--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "snuggsi",
-  "version": "0.8.1",
-  "author": ["Snuggs", "Brandondees"],
+  "version": "0.8.2",
+  "author": [
+    "Snuggs",
+    "Brandondees"
+  ],
   "description": "Easy Web Components in 1KB",
   "license": "MIT",
   "bugs": {
